# mscommonlib

./: CMakeLists.txt  README.md  build.sh  makefile  mscommonlib.pc.in  pom.cpp
modulefiles/garrawarla/: devel.lua
modulefiles/topaz/: devel.lua
src/: flags.mak  lib.mak  makefile
